Modificando los objetos de Jwt a Jwk para el manejo de los tokens de OAuth2